[gd_scene load_steps=14 format=2]

[ext_resource path="res://Puzzle/fondo_fichas.png" type="Texture" id=1]
[ext_resource path="res://MenuInicio/MenuSeleccionNivel.gd" type="Script" id=2]
[ext_resource path="res://MenuInicio/fondo.png" type="Texture" id=3]
[ext_resource path="res://timer/tema_ganar.tres" type="Theme" id=4]
[ext_resource path="res://Puzzle/pez/pez1.png" type="Texture" id=5]
[ext_resource path="res://Puzzle/dinosaurio/dino1.png" type="Texture" id=6]
[ext_resource path="res://Puzzle/gato/gato1.png" type="Texture" id=7]
[ext_resource path="res://MenuInicio/salirHover.png" type="Texture" id=8]
[ext_resource path="res://MenuInicio/salirNormal.png" type="Texture" id=9]
[ext_resource path="res://MenuInicio/salirClick.png" type="Texture" id=10]
[ext_resource path="res://MenuInicio/asset_puerta.png" type="Texture" id=11]
[ext_resource path="res://timer/fondoTImer.png" type="Texture" id=12]
[ext_resource path="res://MenuInicio/tema_creditos.tres" type="Theme" id=13]

[node name="SeleccionNivel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Fondo" type="Sprite" parent="."]
modulate = Color( 0.239216, 0.937255, 0.839216, 1 )
position = Vector2( 510.5, 300.5 )
scale = Vector2( 0.538021, 0.562037 )
texture = ExtResource( 3 )

[node name="AssetPuerta" type="Sprite" parent="."]
position = Vector2( 298.5, 300.5 )
scale = Vector2( 0.119384, 0.139815 )
texture = ExtResource( 11 )

[node name="AssetPuerta2" type="Sprite" parent="."]
position = Vector2( 439, 300 )
scale = Vector2( 0.119384, 0.139815 )
texture = ExtResource( 11 )

[node name="AssetPuerta3" type="Sprite" parent="."]
position = Vector2( 582, 300 )
scale = Vector2( 0.119384, 0.139815 )
texture = ExtResource( 11 )

[node name="AssetPuerta4" type="Sprite" parent="."]
position = Vector2( 725, 299 )
scale = Vector2( 0.119384, 0.139815 )
texture = ExtResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 45
custom_constants/margin_top = 35
custom_constants/margin_left = 45
custom_constants/margin_bottom = 35

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 45.0
margin_top = 225.0
margin_right = 979.0
margin_bottom = 375.0
size_flags_vertical = 4
custom_constants/separation = 50
alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 206.0
margin_right = 299.0
margin_bottom = 150.0
texture_normal = ExtResource( 1 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 349.0
margin_right = 442.0
margin_bottom = 150.0
texture_normal = ExtResource( 1 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 492.0
margin_right = 585.0
margin_bottom = 150.0
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="MarginContainer/HBoxContainer"]
modulate = Color( 0.545098, 1, 0.529412, 1 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 635.0
margin_right = 728.0
margin_bottom = 150.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TextureButton4"]
margin_left = -13.0
margin_top = -39.0
margin_right = 108.0
margin_bottom = -4.0
theme = ExtResource( 4 )
text = "FIESTA"

[node name="Dino1" type="Sprite" parent="."]
position = Vector2( 582, 193 )
scale = Vector2( 0.134725, 0.134725 )
texture = ExtResource( 6 )

[node name="Gato1" type="Sprite" parent="."]
position = Vector2( 441, 190 )
scale = Vector2( 0.141288, 0.141288 )
texture = ExtResource( 7 )

[node name="Pez1" type="Sprite" parent="."]
position = Vector2( 303, 184 )
scale = Vector2( 0.160559, 0.160559 )
texture = ExtResource( 5 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_top = 25
custom_constants/margin_left = 25

[node name="BotonSalir" type="TextureButton" parent="MarginContainer2"]
margin_left = 25.0
margin_top = 25.0
margin_right = 89.0
margin_bottom = 92.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 8 )

[node name="BotonCreditos" type="TextureButton" parent="."]
margin_left = 856.0
margin_top = 510.0
margin_right = 984.0
margin_bottom = 567.0
texture_normal = ExtResource( 12 )

[node name="Label" type="Label" parent="BotonCreditos"]
margin_left = 14.0
margin_top = 15.0
margin_right = 119.0
margin_bottom = 39.0
theme = ExtResource( 13 )
text = "Creditos"

[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="MarginContainer2/BotonSalir" to="." method="_on_BotonSalir_pressed"]
[connection signal="pressed" from="BotonCreditos" to="." method="_on_BotonCreditos_pressed"]
